# JAXNRSur

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  _zensical_build.toml  index.html  pyproject.toml  zensical.toml
.github/workflows/: CI.yml  docs.yml  pre-commit-autoupdate.yml
docs/: FAQ.md  citing.md  index.md  installation.md  quickstart.md
docs/api/jaxnrsur/: DataLoader.md  EIMPredictor.md  Harmonics.md  Kernels.md  NRHybSur3dq8.md  NRSur7dq4.md  PolyPredictor.md  Spline.md  special_function.md
docs/tutorials/: index.md
latest/: 404.html  gen_api.py  index.html  objects.inv  search.json  sitemap.xml
latest/FAQ/: index.html
latest/api/jaxnrsur/DataLoader/: index.html
latest/api/jaxnrsur/EIMPredictor/: index.html
latest/api/jaxnrsur/Harmonics/: index.html
latest/api/jaxnrsur/Kernels/: index.html
latest/api/jaxnrsur/NRHybSur3dq8/: index.html
latest/api/jaxnrsur/NRSur7dq4/: index.html
latest/api/jaxnrsur/PolyPredictor/: index.html
latest/api/jaxnrsur/Spline/: index.html
latest/api/jaxnrsur/special_function/: index.html
latest/citing/: index.html
latest/contributing/: index.html
latest/installation/: index.html
latest/quickstart/: index.html
latest/tutorials/: frequency_domain.ipynb  getting_started.ipynb  gradient_optimization.ipynb  index.html
latest/tutorials/frequency_domain/: index.html
latest/tutorials/getting_started/: index.html
latest/tutorials/gradient_optimization/: index.html
src/jaxnrsur/: DataLoader.py  Kernels.py  NRHybSur3dq8.py  NRSur7dq4.py  Spline.py  __init__.py
tests/cross_validation/: .gitignore  conftest.py  test_gwsur_overlap.py
tests/integration/: test_nrhybsur3dq8.py  test_nrsur7dq4.py
tests/unit/: test_poly_predictor.py  test_wrapper.py
