[project]
name = "JAXNRSur"
dynamic = ["version"]
description = "A JAX-based package for differentiable numerical relativity surrogate waveform generation"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Kaze W. K. Wong", email = "kazewong.physics@gmail.com"},
    {name = "Max Isi"},
    {name = "Ethan Payne"},
    {name = "Vijay Varma"},
    {name = "Tousif Islam"},
]
maintainers = [
    {name = "Thomas Ng", email = "thomas.ng@nikhef.nl"},
]
license = {file = "LICENSE"}
keywords = ["gravitational-wave", "numerical relativity", "autodiff", "jax"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
]

dependencies = [
    "beartype>=0.21.0",
    "equinox>=0.12.1",
    "h5py>=3.13.0",
    "jax>=0.8.2",
    "jaxtyping>=0.3.3",
    "lineax>=0.0.8",
    "requests>=2.32.3",
]

[project.optional-dependencies]
cuda = [
    "jax[cuda]>=0.8.2",
]

[dependency-groups]
test = [
    "coverage>=7.7.0",
    "coveralls>=4.0.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.0.0",
    "pyright>=1.1.402",
    "ruff>=0.12.0",
]
cross-validation = [
    "gwsurrogate>=1.1.0",
]
doc = [
    "nbconvert",
    "mkdocstrings[python]",
    "pymdown-extensions",
    "zensical",
]

[project.urls]
Homepage = "https://github.com/GW-JAX-Team/JAXNRSur"
Documentation = "https://gw-jax-team.github.io/JAXNRSur/"
Repository = "https://github.com/GW-JAX-Team/JAXNRSur"
"Bug Tracker" = "https://github.com/GW-JAX-Team/JAXNRSur/issues"
Changelog = "https://github.com/GW-JAX-Team/JAXNRSur/releases"

[tool.uv.sources]
jaxnrsur = { workspace = true }

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "1.0.0"

[tool.pytest.ini_options]
pythonpath = ["."]
norecursedirs = ["tests/cross_validation"]

[tool.pyright]
include = ["src"]

[tool.ruff.lint]
ignore = ["F722"]

[tool.coverage.report]
exclude_also = [
    'def __repr__',
    "raise AssertionError",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
